@@ -6,6 +6,7 @@
 - Added better readability to the exception analysis.
 - Added delegate handling to the getter analysis.
 - Added attribute handling to the meta analysis.
+- Added the declaration place to the getter analysis.
 - Change: The scalar analysis classes are now reused.
 - Change: Renamed the language fallback key from 'text' to 'en'.
 - Change: Dropped PHP 7.2 and 7.3 support.
